[gd_scene load_steps=8 format=3 uid="uid://b8me27agp6vuk"]

[ext_resource type="Script" uid="uid://bguce6op0jbnu" path="res://menus/start_menu.gd" id="1_3kg5v"]
[ext_resource type="Texture2D" uid="uid://cgyr4apq2bpu7" path="res://art/title_elements/gunner_png-removebg-preview.png" id="2_yhcmu"]
[ext_resource type="Texture2D" uid="uid://bqubrg7bkepp6" path="res://art/title_elements/TOASTER-removebg-preview.png" id="3_ostuc"]
[ext_resource type="Texture2D" uid="uid://5h5o5rgmefuf" path="res://art/background.png" id="3_w3tic"]
[ext_resource type="Texture2D" uid="uid://deukfuh5jul05" path="res://art/title_elements/trashgcan_-removebg-preview.png" id="4_54tpi"]
[ext_resource type="Texture2D" uid="uid://badiiodv2fhrv" path="res://art/title_elements/BOSS-removebg-preview.png" id="5_h6phu"]
[ext_resource type="Texture2D" uid="uid://cgpy4hgfv7b7x" path="res://art/title_elements/cheesecake_transparent-removebg-preview.png" id="5_kli5o"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kg5v")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DonutImage" type="TextureRect" parent="Background"]
z_index = 40
layout_mode = 0
offset_left = 179.56
offset_top = 403.795
offset_right = 693.865
offset_bottom = 794.295
scale = Vector2(0.455, 0.455)
texture = ExtResource("2_yhcmu")

[node name="ToasterImage" type="TextureRect" parent="Background"]
z_index = 20
layout_mode = 0
offset_left = 565.0
offset_top = 270.0
offset_right = 1098.0
offset_bottom = 803.0
scale = Vector2(0.475, 0.475)
texture = ExtResource("3_ostuc")
expand_mode = 4
stretch_mode = 3

[node name="TrashcanImage" type="TextureRect" parent="Background"]
z_index = 35
layout_mode = 0
offset_left = 211.0
offset_top = 406.0
offset_right = 1155.0
offset_bottom = 1804.0
scale = Vector2(0.115, 0.115)
texture = ExtResource("4_54tpi")

[node name="CheesecakeImage" type="TextureRect" parent="Background"]
z_index = 45
layout_mode = 0
offset_left = 34.97
offset_top = 420.875
offset_right = 546.97
offset_bottom = 765.165
scale = Vector2(0.455, 0.455)
texture = ExtResource("5_kli5o")
flip_h = true

[node name="BackgroundImage" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = -688.0
offset_top = -446.0
offset_right = 977.0
offset_bottom = 676.0
texture = ExtResource("3_w3tic")
flip_h = true
flip_v = true

[node name="BlenderImage" type="Sprite2D" parent="Background"]
position = Vector2(831, 322)
scale = Vector2(0.997471, 0.997471)
texture = ExtResource("5_h6phu")

[node name="GameTitle" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2
theme_override_constants/margin_top = 67

[node name="RichTextLabel" type="RichTextLabel" parent="GameTitle"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 60
text = "Food Fight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -6.0
offset_right = 100.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartGameButton" type="Button" parent="Buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = "Start Game"

[node name="TutorialButton" type="Button" parent="Buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = "Tutorial"

[node name="ExitGameButton" type="Button" parent="Buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = "Exit Game"

[connection signal="pressed" from="Buttons/VBoxContainer/StartGameButton" to="." method="on_start_game"]
[connection signal="pressed" from="Buttons/VBoxContainer/TutorialButton" to="." method="on_enter_tutorial"]
[connection signal="pressed" from="Buttons/VBoxContainer/ExitGameButton" to="." method="on_exit_game"]
